--- a/src/main/resources/templates/admin/editUser.html
+++ b/src/main/resources/templates/admin/editUser.html
@@ -5,6 +5,6 @@
     <title>Community blog</title>
 </head>
 <body>
-<h1>Edycja użytkownika</h1>
+<h1>Edit user</h1>
 <span th:text="${editUserForm}" ></span>
 </body></html>
