--- a/src/main/resources/templates/admin/showUsers.html
+++ b/src/main/resources/templates/admin/showUsers.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Users in the system:</h1>
 <p th:each="user : ${users}">
-    <span th:text="${user.id}" /> | <span th:text="${user.firstName}" /> | <span th:text="${user.lastName}" /> | <span th:text="${user.roles}" /> <a th:href="@{/admin/user(id=${user.id})}" >Edytuj</a>
+    <span th:text="${user.id}" /> | <span th:text="${user.firstName}" /> | <span th:text="${user.lastName}" /> | <span th:text="${user.roles}" /> <a th:href="@{/admin/user(id=${user.id})}" >Edit</a>
 </p>
 
 User id: <input id="userId" type="number">
